# mlir-fuzz

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bench_xdsl_tv.py  is-miscompiling.sh  llvmIsExact.mlir   plot_xdsl_tv_timings.py  run.sh  run_xdsl_tv.py  test.mlir
dialects/: arith-test.mlir  arith.irdl  arith.mlir  bool-ruler.mlir  bv-ruler.mlir  comb.mlir  llvm.mlir  smt.mlir  stablehlo.mlir
examples/: superoptimizer-input-with-input.mlir  superoptimizer-input.mlir
experimental/: CMakeLists.txt
experimental/comb-fuzzer/: CMakeLists.txt  Graph.h  comb-fuzzer.cpp
include/: CLITool.h  GeneratorInfo.h  IRDLUtils.h  SubPattern.h
lib/: CLITool.cpp  CMakeLists.txt  GeneratorInfo.cpp  IRDLUtils.cpp  SubPattern.cpp
mlir-enumerate/: CLITool.h  CMakeLists.txt  GeneratorInfo.cpp  GeneratorInfo.h  IRDLUtils.cpp  IRDLUtils.h  mlir-enumerate.cpp
tools/: CMakeLists.txt
tools/arith-superoptimizer/: CMakeLists.txt  arith-superoptimizer.cpp  remove_duplicates.py
tools/check-subpattern/: CMakeLists.txt  check-subpattern.cpp
tools/mlir-enumerate/: CMakeLists.txt  mlir-enumerate.cpp
tools/remove-redundant-patterns/: CMakeLists.txt  remove-redundant-patterns.cpp
tools/superoptimizer/: CMakeLists.txt  superoptimizer.cpp
utils/: build-llvm.sh  build.sh  setup.sh
